force-app/main/default/objects/LicensePeriod__c/LicensePeriod__c.object-meta.xml
<CustomObject>
    <label>License Period</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>License Period Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>