force-app/main/default/objects/LicensePeriod__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <label>License Type</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>License Periods</relationshipLabel>
    <relationshipName>License_Periods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>