force-app/main/default/objects/LicensePeriod__c/fields/RequiredCoreCE__c.field-meta.xml
<CustomField>
    <fullName>RequiredCoreCE__c</fullName>
    <label>Required Core CE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>