force-app/main/default/objects/LicensePeriod__c/fields/RequiredElectiveCE__c.field-meta.xml
<CustomField>
    <fullName>RequiredElectiveCE__c</fullName>
    <label>Required Elective CE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>