force-app/main/default/objects/LicensePeriod__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous License Period</fullName>
            </value>
            <value>
                <fullName>Current License Period</fullName>
            </value>
            <value>
                <fullName>Next License Period</fullName>
            </value>
            <value>
                <fullName>Future License Period</fullName>
            </value>
            <value>
                <fullName>Historical License Periods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>